------------------------------------------------------------------------
r1445 | gaser | 2019-03-22 16:11:22

Changed paths:
M       CAT12-Manual.pdf
M       CHANGES.txt
M       html/cat_versions.html

Changed: Updated version information.
------------------------------------------------------------------------
r1444 | gaser | 2019-03-22 15:30:35 +0100 (Fr, 22 Mär 2019) | 12 lines

Changed paths:
M       CHANGES.txt
M       cat_long_main.m
M       cat_vol_groupwise_ls.m
M       cat_vol_series_align.m

(1) Fixed: Regularization for non-linear registration in longitudinal registration
    was dependent on signal. Now the images are internally scaled to a constant
    global mean value.
(2) Changed: Corrected regularization fir intra-subject bias correction in 
    longitudinal pipeline.

------------------------------------------------------------------------
r1443 | gaser | 2019-03-21 16:15:33 +0100 (Do, 21 Mär 2019) | 13 lines

Changed paths:
M       CHANGES.txt
M       cat_conf_long.m
M       cat_conf_tools.m
M       cat_long_main.m
M       cat_parallelize.m
M       cat_vol_groupwise_ls.m
M       cat_vol_series_align.m
M       tbx_cfg_cat.m

Changed: Increased regularization for intra-subject bias correction in longitudinal
registration.

------------------------------------------------------------------------
r1442 | dahnke | 2019-03-21 08:48:36 +0100 (Do, 21 Mär 2019) | 8 lines

Changed paths:
M       CHANGES.txt
M       cat_parallelize.m
M       cat_vol_ctype.m

*) Fixed:   Corrected bugs in cat_parallelize and cat_vol_ctype.


------------------------------------------------------------------------
r1441 | gaser | 2019-03-20 16:24:06 +0100 (Mi, 20 Mär 2019) | 7 lines

Changed paths:
M       CHANGES.txt
M       cat_long_main.m

Changed: Increased regularization for intra-subject bias correction in longitudinal
registration.

------------------------------------------------------------------------